# modizer

./: .gitignore  README  README.md  TODO  main.mm  modizer copy-Info.plist  modizer mac-Info.plist  modizer sim-Info.plist  modizer-Info.plist  modizer_Prefix.pch  modizer_changes.txt  modizer_changes.txt.sb-10cabdfd-5SMj1d
libs/binio/libbinio-master/: .gitignore  CMakeLists.txt  ChangeLog  INSTALL  INSTALL.win32  Makefile.am  Makefile.bt  NEWS  README  TODO  appveyor.yml  binio.spec  binio_mdk.spec  configure.ac  libbinio.pc.in  libbinio.qpg
libs/binio/libbinio-master/doc/: Makefile.am  libbinio.texi
libs/binio/libbinio-master/m4/: .gitignore
libs/binio/libbinio-master/src/: CMakeLists.txt  Makefile.am  Makefile.bt  binfile.cpp  binio.cpp  binio.h.in  libbinio.dsp
libs/libeupmini/libeupmini/eupmini/: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  MonophonicAudioSynthesizer.hpp  NEWS-ja  README-ja  README.md  TODO  TownsFmEmulator.cpp  TownsFmEmulator.hpp  TownsFmEmulator2.cpp  TownsFmEmulator2.hpp  audioout.hpp  eupplayer.cpp  eupplayer.hpp  eupplayer_towns.hpp  eupplayer_townsEmulator.cpp  eupplayer_townsEmulator.hpp  mksintbl.c  opn2.c  opn2.h  sintbl.cpp  sintbl.hpp
libs/libkss/libkss/: CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE.md  README.md  iomap.md  kssxspec.md
libs/libkss/libkss/example/: kss2wav.c
libs/libkss/libkss/src/: kss2vgm.c  kss2vgm.h  kss2wav.c  kssplay.c  kssplay.h
libs/libpmdmini/libpmdmini/: CMakeLists.txt  PC-98_Hartmann_s_Youkai_GIrl.M  README.md  pmdmini.txt  sdlplay.cpp
libs/libpmdmini/libpmdmini/inherits/: AUTHORS  COPYING.ja  README  README.ja
libs/libpmdmini/libpmdmini/src/: CMakeLists.txt  pmdmini.cpp  pmdmini.h
libs/libxsf/src/in_snsf/: CMakeLists.txt  GNUmakefile  XSFConfigDialog_SNSF.cpp  XSFConfigDialog_SNSF.h  XSFConfig_SNSF.cpp  XSFConfig_SNSF.h  XSFPlayer_SNSF.cpp  in_snsf.vcxproj  in_snsf.vcxproj.filters
libs/sc68/: AUTHORS  Makefile.am  NEWS  README  README-SVN  configure.ac  sc68.el
libs/sc68/api68/: api68.c  mixer68.c
libs/sc68/emu68/: cc68.c  cc68.h  getea68.c  inst68.h  line2_68.c  line3_68.c  line6_68.c  lineC_68.c
libs/sc68/file68/: Makefile.am  README  alloc68.h  config_type68.h  configure.ac  debugmsg68.c  debugmsg68.h  file68.pc.in  gzip68.c  gzip68.h  ice68.c  istream68.c  istream68_def.h  istream68_file.m  istream68_mem.h  istream68_null.h  url68.c
libs/sc68/file68/data68/: Makefile.am  sc68.cfg
libs/sc68/file68/sc68/: file68.h  file68_api.h  file68_chk.h  file68_err.h  file68_features.h  file68_ice.h  file68_msg.h  file68_opt.h  file68_ord.h  file68_reg.h  file68_rsc.h  file68_str.h  file68_tag.h  file68_tdb.h  file68_uri.h  file68_vfs.h  file68_vfs_ao.h  file68_vfs_curl.h  file68_vfs_def.h  file68_vfs_fd.h  file68_vfs_file.h  file68_vfs_mem.h  file68_vfs_null.h  file68_vfs_z.h  file68_zip.h
libs/sc68/file68/src/: endian68.c  error68.c  file68.c  file68_private.h  gzip68.c  ice68.c  init68.c  msg68.c  option68.c  registry68.c  replay.inc.h  replay68.c  rsc68.c  string68.c  timedb.inc.h  timedb68.c  uri68.c  vfs68.c  vfs68_ao.c  vfs68_curl.c  vfs68_fd.c  vfs68_file.c  vfs68_mem.c  vfs68_null.c  vfs68_z.c
libs/sc68/io68/: mfpemul.c  paula_io.h  paulaemul.c  shifter_io.h  ymemul.c
libs/sc68/libsc68/: Makefile.am  README  configure.ac  sc68.pc.in
libs/sc68/libsc68/dial68/: Makefile.am  dial68.c  dial68.h  dial_conf.c  dial_finf.c  dial_tsel.c
libs/sc68/libsc68/emu68/: Makefile.am  assert68.h  cc68.c  cc68.h  emu68.c  (+29 more)
libs/sc68/sc68-libc/: Makefile.am  basename.c  libc68.h  strtoul.c
libs/sc68/unice68/: unice68.h  unice68.texi  unice68_native.c  unice68_pack.c
libsidplay1/libsidplay-1.36.54/src/: 6510_.cpp  Makefile.am  Makefile.in  emucfg.h  envelope.h  libcfg.h.in  mus_.cpp  myendian.h  opstruct.h  panning.txt  player.cpp  player.h  pp_.h  psid_.cpp  samples.cpp  sid_.cpp  sidtune.h
libsidplayfp-0.2.0/: AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h  config.status  configure  configure.ac
libsidplayfp-0.2.0/builders/hardsid-builder/: hardsid-builder.cpp  hardsid-win.cpp  hardsid.h
libsidplayfp-0.2.0/builders/resid-builder/: resid.h
libsidplayfp-0.2.0/builders/resid-builder - copie/: resid-builder.cpp  resid-emu.h  resid.h
libsidplayfp-0.2.0/builders/residfp-builder/: residfp-emu.h
libsidplayfp-0.2.0/m4/: my_macros.m4  visibility.m4
libsidplayfp-0.2.0/sidplayfp/: SidTune.h  config.cpp  event.h  nullsid.h  player.cpp  player.h  psiddrv.cpp  psiddrv.lo  reloc65.c  sidbuilder.h  sidplay2.cpp  sidplay2.lo
libsidplayfp-0.2.0/sidplayfp/c64/: c64cia.h  c64xsid.h
libsidplayfp-0.2.0/sidplayfp/mos6510/: conf6510.h  mos6510.lo
libsidplayfp-0.2.0/sidplayfp/mos6526/: mos6526.cpp  mos6526.h  mos6526.lo
libsidplayfp-0.2.0/sidplayfp/mos656x/: mos656x.h  mos656x.lo
libsidplayfp-0.2.0/sidplayfp/sid6526/: sid6526.cpp
libsidplayfp-0.2.0/sidplayfp/sidplayfp.xcodeproj/: project.pbxproj
libsidplayfp-0.2.0/sidplayfp/sidtune/: IconInfo.cpp  IconInfo.lo  InfoFile.lo  PSID.lo  SidTuneTools.lo  p00.lo  prg.lo
libsidplayfp-0.2.0/sidplayfp/xsid/: xsid.cpp  xsid.lo
libsidplayfp-0.2.0/utils/: SidFilter.lo  SidTuneMod.cpp  SidTuneMod.h  SidTuneMod.lo  SidUsage.h  SidUsage.lo  iniParser.h
libsidplayfp-0.2.0/utils/.deps/: smm.Plo
libsidplayfp-0.2.0/utils/MD5/: MD5.h
modizer/libs/libgsf/: Makefile  Makefile.in  configure.in  loadpic.cpp  loadpic.h
modizer/libs/mdxplay/: Makefile  Makefile.am  Makefile.in  mdx2151.c  mdxopl3.c  mdxopl3.h
modizer/sid/: aclocal.m4  configure.ac
modizer/sid/builders/: Makefile  Makefile.in
modizer/sid/libsidplay/: configure
modizer/sid/libsidutils/: Makefile  Makefile.am  Makefile.in  configure.ac  libtool
modizer/sid/resid/: Makefile  Makefile.am  VC_CC_SUPPORT.txt  aclocal.m4  configure  configure.in  siddefs.h.in
utils/lha/: Makefile.am  Makefile.in  append.c  bitio.c  crcio.c  dhuf.c  extract.c  getopt_long.c  getopt_long.h  huf.c  larc.c  lhadd.c  lharc.c  lhdir.h  maketree.c  prototypes.h  shuf.c  util.c  vsnprintf.c
utils/lha/.deps/: getopt_long.Po  header.Po  lhadd.Po  lhext.Po  patmatch.Po  slide.Po
(+8054 files in other folders)
