# ,----------------------------------------------------------------------.
# |                                                                      |
# | sc68-ng -- Makefile.am -- Use with automake to produce configure.in  | 
# |                                                                      |
# |               Copyright (c) 2007-2016 Benjamin Gerard                |
# |                                                                      |
# |               <http://sourceforge.net/users/benjihan>                |
# |                                                                      |
# `----------------------------------------------------------------------'
# @configure_input@

ACLOCAL_AMFLAGS = -I m4 --install

ALL_SUBDIRS = as68 desa68 unice68 file68 info68 sourcer68 libsc68	\
 mksc68 sc68

DIST_SUBDIRS = $(SUBDIRS)
SUBDIRS      = $(subdirs)
EXTRA_DIST   = sc68.el README-SVN
